--- a/First-calculator/css/style.css
+++ b/First-calculator/css/style.css
@@ -48,14 +48,48 @@ body {
 /******************************************
 /* LAYOUT
 /*******************************************/
-header {
+body > section{
+     max-width: 100%;
+     background-color: black;
+     width: 300px;
+     height: 370px;
+     border-radius: 20px;
+     margin: 10% auto 0% auto;
+     padding: 3% 2% 0px 2%;  /*top right bottom left*/
+}
+
+#buttons{
+     max-width:100%;
+     margin: 10% 0% 0% 0%;
 
 }
 
-footer {
-
+#total{
+     background-color: white;
+     height: 18%;
+     font-size: 27px;
+     padding-top: 7px;
 }
+
+#dot{
+     padding: 2% 8% 2% 8%;
+}
+
+.buttons-row{
+     margin-left: 4%;
+}
+
+.button{
+     padding: 2% 6% 2% 6%;
+     margin: 2px 2px 2px 2px;
+     font-size: 30px;
+     font-weight: bold;
+     border-radius: 50%;
+}
+
+
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
