solved 4 grammar mistakes

--- a/star-wars-quotes-final/views/index.ejs
+++ b/star-wars-quotes-final/views/index.ejs
@@ -21,9 +21,9 @@
 
     <section data-position="update-quote">
       <div>
-        <h2>Darth Vadar invades!</h2>
+        <h2>Darth Vader invades!</h2>
         <p>
-          Replace first Yoda's quote with a quote written by Darth Vadar
+          Replace first Yoda's quote with a quote written by Darth Vader
         </p>
         <button id="update-button">Replace Yoda's quote</button>
       </div>
@@ -31,12 +31,12 @@
 
     <section data-position="delete-quote">
       <div>
-        <h2>Remove Darth Vadar!</h2>
+        <h2>Remove Darth Vader!</h2>
         <p>
-          Delete one Darth Vadar's quote. Does nothing if there are no more
-          Darth Vadar's quote
+          Delete one Darth Vader quote. Does nothing if there are no more
+          Darth Vader quote
         </p>
-        <button id="delete-button">Delete Darth Vadar's quote</button>
+        <button id="delete-button">Delete Darth Vader quote</button>
       </div>
       <div id="message"></div>
     </section>
