--- a/fitness-tracker-mvp/views/signup.ejs
+++ b/fitness-tracker-mvp/views/signup.ejs
@@ -25,23 +25,20 @@
                         </a>
                     </div>
                     <div class="login__text-container">
-                        <span class="login__text">LOG IN</span>
+                        <span class="login__text">SIGN UP</span>
                     </div>
                     <div class="login__form-container">
-                        <form action="/login" method="POST">
+                        <form action="/signup" method="POST">
+                            <input type="text" name="userName" placeholder="User Name">
                             <input type="email" name="email" placeholder="Email">
                             <input type="password" name="password" placeholder="Password">
+                            <input type="password" name="confirmPassword" placeholder="Confirm Password">
                             <input type="submit">
                         </form>
                     </div>
                     <div class="login__form-alerts">
                         <% if (locals.messages.errors) { %>
                             <% messages.errors.forEach( el => { %>
-                                <div class="alert alert-danger"><%= el.msg %></div>
-                            <% }) %>    
-                        <% } %>
-                        <% if (locals.messages.info) { %>
-                            <% messages.info.forEach( el => { %>
                                 <div class="alert alert-danger"><%= el.msg %></div>
                             <% }) %>    
                         <% } %>
