--- a/questions/react/02-circle/src/App.css
+++ b/questions/react/02-circle/src/App.css
@@ -1,7 +1,6 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -49,8 +48,13 @@
 
 .circle{
   position: absolute;
-  background-color: blue;
   width: 30px;
   height: 30px;
   border-radius: 100%;
+  border: 4px solid blue;
+}
+
+.button{
+  position: relative;
+  
 }
