--- a/animations/landing-1/src/index.css
+++ b/animations/landing-1/src/index.css
@@ -75,8 +75,23 @@ p {
   flex: 1;
   height: 100%;
   background: #000;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
+
+.blocks-menu {
+  position: fixed;
+  top: 100vh;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+
+.block-menu {
+  flex: 1;
+  height: 100%;
+  background: #000;
+}
+
 .rem {
   height: 50vw;
   background: black;
@@ -144,12 +159,13 @@ h1 {
 }
 
 .menu-container {
-  position: absolute;
+  position: fixed;
   height: 100vh;
   width: 100%;
-  background-color: black;
-  z-index: 10;
-  top: 0;
+  background-color: transparent;
+  z-index: 100;
+  top: -100vh;
+  opacity: 0;
   overflow: hidden;
 }
 
@@ -158,8 +174,7 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 5em;
-  height: 100%;
+  gap: 3em;
 }
 
 .link {
@@ -169,9 +184,70 @@ h1 {
 }
 
 .toggle-menu {
+  z-index: 9999;
+  position: relative;
   display: flex;
   justify-content: flex-end;
   margin-right: 2rem;
   margin-top: 2rem;
   cursor: pointer;
+}
+
+.rolling-text {
+  display: inline-block;
+  height: 100px;
+  text-decoration: none;
+  line-height: 100px;
+  overflow: hidden;
+  color: #333;
+}
+
+.rolling-text:hover .letter,
+.rolling-text.play .letter {
+  transform: translateY(-100%);
+}
+
+.rolling-text .blockm:last-child {
+  color: #c93d4b;
+}
+
+.rolling-text .letter {
+  display: inline-block;
+  transition: transform 0.6s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.letter:nth-child(1) {
+  transition-delay: 0s;
+}
+
+.letter:nth-child(2) {
+  transition-delay: 0.015s;
+}
+
+.letter:nth-child(3) {
+  transition-delay: 0.03s;
+}
+
+.letter:nth-child(4) {
+  transition-delay: 0.045s;
+}
+
+.letter:nth-child(5) {
+  transition-delay: 0.06s;
+}
+
+.letter:nth-child(6) {
+  transition-delay: 0.075s;
+}
+
+.letter:nth-child(7) {
+  transition-delay: 0.09s;
+}
+
+.letter:nth-child(8) {
+  transition-delay: 0.105s;
+}
+
+.letter:nth-child(9) {
+  transition-delay: 0.12s;
 }
