--- a/pizza/api/public/style.css
+++ b/pizza/api/public/style.css
@@ -238,6 +238,11 @@ button:disabled {
   align-items: center;
 }
 
+.da {
+  display: flex;
+  flex-direction: column;
+}
+
 .pizza-of-the-day {
   border-top: 1px solid var(--border);
   margin-top: 50px;
@@ -246,6 +251,7 @@ button:disabled {
 
 .pizza-of-the-day > div {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
